tests/purs/passing/ESFFIFunctionConst.purs
module Main where

import Prelude
import Effect.Console (log)

foreign import functionName :: forall a. a -> a

main = log "Done"
